--- a/frontend/src/components/session/LoginForm.css
+++ b/frontend/src/components/session/LoginForm.css
@@ -1,54 +1,83 @@
+#background {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.612);
+  display: none;
+}
+
+
+#signInContainer {
+  width: 342px;
+  margin: 50px auto;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: none;
+}
+
 #signInForm {
-    max-width: 400px;
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  h1 {
-    text-align: left;
-    color: #333;
-  }
-  
-  form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  ul {
-    list-style: none;
-    padding: 0;
-    margin-bottom: 10px;
-    color: #ff0000;
-  }
-  
-  label {
-    margin-bottom: 8px;
-    font-weight: bold;
-    color: #333;
-  }
-  
-  input {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
-  
-  button {
-    background-color: #f07d00;
-    color: #fff;
-    padding: 10px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-  }
-  
-  button:hover {
-    background-color: #e36900;
-  }
+  text-align: left;
+}
+
+#signInH1 {
+  font-size: 24px;
+  text-align: left;
+}
+
+
+#signInForm form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#signInEmail {
+  width: 100%;
+  padding: 10px;
+  margin-top: 5px;
+  box-sizing: border-box;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  font-size: 12px;
+}
+#SignInPassword {
+  width: 100%;
+  padding: 10px;
+  margin-top: 5px;
+  box-sizing: border-box;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+#signInButton {
+  background-color: black;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s, transform 0.3s, opacity 0.3s;
+}
+
+#signInButton:hover {
+  background-color: black;
+  transform: scale(1.05);
+  opacity: 0.8;
+}
+
+#registerLink:hover {
+  background-color: black;
+  transform: scale(1.05);
+  opacity: 0.8;
+}
+
+#registerLink {
+  width: 40%;
+}
+
