images are here

--- a/frontend/src/components/navigation/Navigation.css
+++ b/frontend/src/components/navigation/Navigation.css
@@ -1,88 +1,114 @@
 #mainNavContainer {
-    position: relative;
-    height: 20vh;
-    width: 100vw; 
-    background-color: #ffffff; 
-    border: 1px solid #000; 
-    display: flex;
-    flex-direction: column;
-  }
+  position: relative;
+  height: 15vh;
+  width: 100vw; 
+  background-color: #ffffff; 
+  border: 1px solid #000; 
+  display: flex;
+  flex-direction: column;
+}
+
+
+#bottomContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40%;
+}
+
+#topContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60%;
+  padding: 0px 10px;
+}
+
+#topContainer > * {
+  margin-right: 10px;
+}
+
+#categoriesButton {
+  background-color: white;
+  color: black;
+  border: none;
+  border-radius: 10px;
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  font-weight: bold;
+}
+
+#homeNavEtsTwo {
+  color: #f1641e;
+  text-decoration: none;
+  font-size: 28px;
+}
+
+#categoriesButton:hover {
+  background-color: rgba(169, 169, 169, 0.5);
+}
+
+#navSearch input {
+  margin-right: 5px;
+}
+
+#searchInput {
+  width: 800px;
+  height: 20px;
+  padding: 8px; 
+  border: 2px solid #ccc; 
+  border-radius: 20px;
+}
+
+#searchSubmit {
+  background-color: #f1641e; 
+  border: none;
+  height: 30px;
+  width: 30px;
+  border-radius: 30px;
+  cursor: pointer;
+  right: 5%;
+  position: relative;
+  right: 5%;
+}
+
+#searchSubmit i {
+  color: white;
+}
+
+#bottomContainer {
+  display: flex;
+}
+
+#bottomNavButton {
+  background-color: white;
+  color: black;
+  border: none;
+  border-radius: 10px;
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+#bottomNavButton:hover {
+  background-color: rgba(169, 169, 169, 0.5);
+}
+
+#signInNav{
+  background-color: white;
+  color: black;
+  border: none;
+  border-radius: 10px;
+  font-weight: bold;
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  position: relative;
+  right: 2%;
+}
+
+#signInNav:hover {
+  background-color: rgba(169, 169, 169, 0.5);
+}
   
-  #topContainer {
-    height: 70%;
-    top: 0;
-    left: 0;
-    width: 100%;
-    border: 1px solid #000;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  #bottomContainer {
-    display: flex;
-    height: 30%;
-    top: 0;
-    left: 0;
-    width: 100%;
-    border: 1px solid #000;
-    align-items: center;
-    justify-content: center;
-  }
-
-  #bottomNavButton {
-    padding: 10px 20px;
-    border-radius: 50px;
-    background-color: #fff;
-    border: none;
-    cursor: pointer;
-    transition: background-color 0.3s ease, opacity 0.3s ease;
-    margin: 0 10px;
-  }
-  
-  #bottomNavButton:hover {
-    background-color: rgba(182, 182, 182, 0.704);
-  }
-  
- #navSearch {
-    width: 65%;
-    margin: 0 10px;
- }
-
- #navSearch input[type="text"] {
-    width: 90%; /* 90% of the width of the form */
-    padding: 10px;
-    border: 2px solid #ccc;
-    border-radius: 50px; /* Large border-radius to create an oval shape */
-  }
-
-  #navSearch button[type="submit"] {
-    width: 30px; 
-    height: 30px; 
-    background-color: orange; 
-    color: #fff; 
-    border: none;
-    border-radius: 50%;
-    cursor: pointer;
-    margin-left: -37px;
-  }
-  
-  NavLink {
-    text-decoration: none;
-    color: #333;
-    font-weight: bold;
-  }
-
-#signInNav {
-    padding: 10px 20px;
-    border-radius: 50px;
-    background-color: #fff;
-    border: none;
-    cursor: pointer;
-    transition: background-color 0.3s ease, opacity 0.3s ease;
-  }
-
-  #signInNav:hover {
-    background-color: rgba(182, 182, 182, 0.704);
-    margin-left: -30px;
-  }
