--- a/frontend/src/components/navigation/ProfileButton.css
+++ b/frontend/src/components/navigation/ProfileButton.css
@@ -1,26 +1,29 @@
 
 #profileIcon {
-    background-color: #fff; /* White background for the profile icon */
+    background-color: #fff;
     border: none;
     cursor: pointer;
+    font-size: 24px;
+    position: relative;
+    right: 2%;
   }
   
   #profileIcon:hover {
-    background-color: rgba(173, 216, 230, 0.7); /* Light blue background with opacity on hover */
+    background-color: rgba(173, 216, 230, 0.7); 
   }
   
   .profile-dropdown {
-    list-style: none;
+    list-style: circle;
     padding: 10px;
     margin: 0;
     background-color: royalblue;
     color: #fff;
-    border-radius: 10px; /* Rounded edges for the rectangle */
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Box shadow for a subtle elevation effect */
+    border-radius: 10px; 
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); 
   }
   
   .profile-dropdown li {
-    margin-bottom: 10px; /* Adjust the spacing between list items as needed */
+    margin-bottom: 10px;
   }
   
   #logoutButton {
