--- a/frontend/src/components/product/ProductsIndex.css
+++ b/frontend/src/components/product/ProductsIndex.css
@@ -27,6 +27,13 @@
     border-radius: 10px;
 }
 
+.productPhotoUrl {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 8px;
+}
+
 #secondaryNav {
     display: flex;
     flex-direction: column;
