--- a/frontend/src/components/review/ReviewCreate.css
+++ b/frontend/src/components/review/ReviewCreate.css
@@ -1,25 +1,64 @@
 #createReviewBacgkround {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.612);
-    display: none;
-  }
-  
-  
-  #createReviewContainer {
-    width: 342px;
-    margin: 50px auto;
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    display: none;
-  }
-  
-  #createReviewForm {
-    text-align: left;
-  }
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.612);
+  display: none;
+}
+
+
+#createReviewContainer {
+  width: 342px;
+  margin: 50px auto;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: none;
+}
+
+#createReviewForm {
+  text-align: left;
+}
+
+.reviewH1 {
+  font-size: 24px;
+  text-align: left;
+  margin-bottom: 20px; /* Add some margin below the title */
+}
+
+#reviewFormForm {
+  display: flex;
+  flex-direction: column;
+}
+
+#createReviewForm label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+#createReviewForm label input {
+  width: 100%;
+  padding: 8px;
+  box-sizing: border-box;
+  margin-top: 5px;
+}
+
+#reviewSubmitButton {
+  background-color: black;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 15px;
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.3s, opacity 0.3s;
+}
+
+#reviewSubmitButton:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+  transform: scale(1.05);
+  opacity: 0.9;
+}
