--- a/frontend/src/components/product/ProductShow.css
+++ b/frontend/src/components/product/ProductShow.css
@@ -37,6 +37,7 @@
 }
 
 #reviewButton {
+    margin-top: 20px;
     position: relative;
     left: 7.3%;
     background-color: black;
@@ -57,11 +58,13 @@
 }
 
 #reviewsContainer {
-    position: relative;
-    left: 7.3%;
+    /* position: relative;
+    left: 7.3%; */
+    margin-left: 7.3%;
 }
 
 .reviewCard {
+    margin-top: 10px;
     margin-bottom: 20px;
     width: 645px;
     border-bottom: solid grey;
