--- a/frontend/src/components/review/ReviewCreate.css
+++ b/frontend/src/components/review/ReviewCreate.css
@@ -27,7 +27,7 @@
 .reviewH1 {
   font-size: 24px;
   text-align: left;
-  margin-bottom: 20px; /* Add some margin below the title */
+  margin-bottom: 20px; 
 }
 
 #reviewFormForm {
