--- a/frontend/src/components/navigation/Navigation.css
+++ b/frontend/src/components/navigation/Navigation.css
@@ -1,11 +1,12 @@
 #mainNavContainer {
   position: relative;
   height: 15vh;
-  width: 100vw; 
+  max-width: 100vw ; 
   background-color: #ffffff; 
   border-bottom: 4px solid gray;
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 
