--- a/frontend/src/components/product/ProductsIndex.css
+++ b/frontend/src/components/product/ProductsIndex.css
@@ -27,6 +27,26 @@
     height: 118px;
     box-sizing: border-box;
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    transition: transform 0.1s ease-in-out;
+}
+
+.productCard:hover {
+    transform: scale(1.01)
+}
+
+.priceContainer {
+    height: 20%;
+    background-color: rgba(255, 255, 255, 0.918);
+    border-radius: 10px;
+    width: 25%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 2%;
+    margin-top: -12%;
+    font-size: 125%;
 }
 
 .productPhotoUrl {
@@ -49,24 +69,125 @@
     margin-top: 5px;
 }
 
-.splashButton {
-    width: 90px;
-    height: 90px;
-    border-radius: 50%;
-    margin: 5px;
-    background-color: #3498db;
-    border: none;
+.splashButtonContainer {
+    width: 60vw;
+    height: 20vh;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-top: 1%;
+}
+
+.splashCard {
+    width: 20%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 175%;
     transition: transform 0.2s ease-in-out;
-    margin-top: 20px;
-    margin-left: 40px;
-    margin-right: 40px;
+}
+
+.navText {
+    margin-top: 5%;
+}
+
+.splashBut {
+    width: 10vh;
+    height: 10vh;
+    border-radius: 50%;
+    background-color: #f1641e;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: transform 0.2s ease-in-out;
     cursor: pointer;
 }
 
-.splashButton:hover {
+
+.splashCard:hover {
     transform: scale(1.1);
 }
 
-.splashButtonText {
-    margin-top: 125%;
+#echoIcon {
+    color: rgb(255, 255, 255);
+    font-size: 150%;
+}
+
+#mainPageBottomNav {
+    max-width: 100vw;
+    height: 20vh;
+    overflow-x: hidden;
+    background-color: #3140af;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.bottomNavContainer {
+    height: 95%;
+    width: 35%;
+}
+
+#logoConatiner{
+    height: 90%;
+    width: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#etsTwoSquare {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 10vh;
+    height: 10vh;
+    background-color: #f1641e;
+    border-radius: 10px;
+}
+
+#etsTwoSquare p {
+    color: white;
+    font-size: 140%;
+    font-weight: bold;
+}
+
+.bottomNavContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.bottomNavContainer h1 {
+    color: white;
+    font-size: 200%;
+}
+
+.aboutCont {
+    height: 50%;
+    width: 95%;
+    padding: 2%;
+}
+
+.aboutCont p {
+    color: white;
+    font-size: 110%;
+}
+
+.h1Wrapper {
+    width: 95%;
+}
+
+#linksContainer p {
+    cursor: pointer;
+    margin-top: 2px;
+}
+
+.linksToPages:hover {
+    text-decoration: underline;
 }
