--- a/frontend/src/components/navigation/Navigation.css
+++ b/frontend/src/components/navigation/Navigation.css
@@ -3,7 +3,7 @@
   height: 15vh;
   max-width: 100vw ; 
   background-color: #ffffff; 
-  border-bottom: 4px solid gray;
+  border-bottom: 4px solid rgba(196, 196, 196, 0.822);
   display: flex;
   flex-direction: column;
   overflow-x: hidden;
