--- a/frontend/src/components/navigation/ProfileButton.css
+++ b/frontend/src/components/navigation/ProfileButton.css
@@ -6,20 +6,24 @@
     font-size: 24px;
     position: relative;
     right: 2%;
+    transition: all 0.2s ease;
   }
   
   #profileIcon:hover {
-    background-color: rgba(173, 216, 230, 0.7); 
+    transform: scale(1.05);
   }
   
   .profile-dropdown {
-    list-style: circle;
+    list-style: none;
     padding: 10px;
     margin: 0;
     background-color: royalblue;
     color: #fff;
     border-radius: 10px; 
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); 
+    position: absolute;
+    top: 15%;
+    left: 75%;
   }
   
   .profile-dropdown li {
@@ -33,9 +37,9 @@
     border-radius: 5px;
     padding: 5px 10px;
     cursor: pointer;
+    transition: all 0.2s ease;
   }
   
   #logoutButton:hover {
-    background-color: royalblue;
-    color: #fff;
+    transform: scale(1.05);
   }
