--- a/frontend/src/components/product/ProductShow.css
+++ b/frontend/src/components/product/ProductShow.css
@@ -27,9 +27,6 @@
     border: 2px solid green;
 }
 
-.productContainer {
-    padding: 10px;
-}
 
 .productPrice {
     font-weight: bold;
@@ -45,12 +42,18 @@
 }
 
 #linksForUser {
-    width: 85%;
+    width: 100%;
     height: 10vh;
     border: 1px solid slateblue;
     display: flex;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
+    flex-direction: row;
+}
+
+#linksForUser h1 {
+    font-size: 175%;
+    margin-right: 5%;
 }
 
 #reviewButton {
@@ -88,7 +91,6 @@
     border: 1px solid rebeccapurple;
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 
 #reviewOtherLinks {
@@ -96,18 +98,38 @@
 }
 
 .reviewCard {
-    border: 1px solid black;
-    margin-top: 10px;
-    margin-bottom: 20px;
-    width: 645px;
+    border: 1px solid black;    
+    width: 100%;
+    height: 15vh;
     border-bottom: solid grey;
+    display: flex;
+    flex-direction: column;
+}
+
+#ratingWrapper {
+    height: 25%;
+    width: 100%;
+    font-size: 250%;
+    
+}
+
+#bodyWrapper {
+    margin-top: 1vh;
+    height: 25%;
+    width: 100%;
+    font-size: 125%;
+}
+
+#updateDeleteWrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: end;
+    justify-content: end;
+    height: 50%;
+    width: 100%;
 }
 
 #updateRevButton {
-    position: relative;
-    left: 3%;
-    bottom: 5px;
-    transform: translateX(-50%);
     background-color: black;
     color: white;
     /* border: none; */
@@ -122,10 +144,6 @@
 }
 
 #deleteRevButton {
-    position: relative;
-    bottom: -34px;
-    left: 12%;
-    transform: translateX(-50%);
     background-color: black;
     color: white;
     /* border: none; */
