--- a/frontend/src/components/product/ProductShow.css
+++ b/frontend/src/components/product/ProductShow.css
@@ -36,7 +36,6 @@
 #reviewWrapper {
     display: flex;
     flex-direction: column;
-    border: 1px solid slateblue;
     width: 85%;
     align-items: center;
 }
@@ -44,7 +43,6 @@
 #linksForUser {
     width: 100%;
     height: 10vh;
-    border: 1px solid slateblue;
     display: flex;
     align-items: center;
     /* justify-content: center; */
@@ -79,7 +77,6 @@
     /* position: relative;
     left: 7.3%; */
     width: 100%;
-    border: 2px solid green;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -88,36 +85,63 @@
 
 #reviewCardsWrapper {
     width: 50%;
-    border: 1px solid rebeccapurple;
     display: flex;
     flex-direction: column;
 }
 
 #reviewOtherLinks {
     width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.orderDetails {
+    margin-right: 15%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+    width: 70%;
+    height: 20%;
+    font-size: 115%;
+}
+
+.orderDetails p {
+    margin-left: 3%;
+}
+
+.orderDetails h1 {
+    font-style: italic;
+    font-size: 125%;
 }
 
 .reviewCard {
-    border: 1px solid black;    
     width: 100%;
-    height: 15vh;
-    border-bottom: solid grey;
+    height: 30vh;
+    border-bottom: 2px solid rgba(128, 128, 128, 0.667);
     display: flex;
     flex-direction: column;
 }
 
 #ratingWrapper {
+    margin-top: 2%;
     height: 25%;
     width: 100%;
-    font-size: 250%;
-    
+    font-size: 200%;
+    color: #f1641ecc;
+}
+
+#authorWrapper {
+    font-size: 115%;
 }
 
 #bodyWrapper {
     margin-top: 1vh;
     height: 25%;
     width: 100%;
-    font-size: 125%;
+    font-size: 100%;
 }
 
 #updateDeleteWrapper {
@@ -162,4 +186,12 @@
 }
 #updateRevButton:hover {
     background-color: rgba(0, 0, 0, 0.8);
+}
+
+#bottomShowLinks {
+    max-width: 100vw;
+    height: 20vh;
+    background-color: #3140af;
+    overflow-x: hidden;
+    margin-top: 2vh;
 }
