--- a/frontend/src/components/review/ReviewCreate.css
+++ b/frontend/src/components/review/ReviewCreate.css
@@ -8,9 +8,14 @@
   display: none;
 }
 
+ul {
+  color: red;
+}
+
 
 #createReviewContainer {
-  width: 342px;
+  width: 25vw;
+  height: 50vh;
   margin: 50px auto;
   background-color: #fff;
   border: 1px solid #ddd;
@@ -37,14 +42,22 @@
 
 #createReviewForm label {
   display: block;
-  margin-bottom: 10px;
+  margin-top: 2%;
 }
 
 #createReviewForm label input {
   width: 100%;
   padding: 8px;
   box-sizing: border-box;
-  margin-top: 5px;
+  margin-top: 1%;
+}
+
+#reviewInput {
+  margin-top: 1%;
+  text-align: top;
+  resize: none;
+  width: 100%;
+  height: 17vh;
 }
 
 #reviewSubmitButton {
@@ -55,6 +68,7 @@
   padding: 10px 15px;
   cursor: pointer;
   transition: background-color 0.3s, transform 0.3s, opacity 0.3s;
+  margin-top: 3%;
 }
 
 #reviewSubmitButton:hover {
