--- a/frontend/src/components/navigation/ProfileButton.css
+++ b/frontend/src/components/navigation/ProfileButton.css
@@ -1,10 +1,15 @@
+.profile-container {
+  position: relative;
+  display: inline-block;
+}
+
 #profileIcon {
   background-color: #fff;
   border: none;
   cursor: pointer;
   font-size: 200%;
   position: relative;
-  right: 2%;
+  right: 40%;
   transition: all 0.2s ease;
 }
 
@@ -15,14 +20,16 @@
 .profile-dropdown {
   font-family: Arial, sans-serif;
   list-style: circle;
-  padding: 2.5vh;
+  padding: 3.5vh;
   background-color: royalblue;
   color: #fff;
   border-radius: 10px; 
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-  margin-top: 6vh;
-  margin-left: 80%;
-  position: fixed;
+  margin-left: 5vh;
+  margin-top: -5vh;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
 }
 
 .profile-dropdown li {
@@ -36,9 +43,12 @@
   border-radius: 5px;
   padding: 5px 10px;
   cursor: pointer;
-  transition: all 0.2s ease;
+  transition: all 0.3s ease;
+  margin-top: 1vh;
 }
 
 #logoutButton:hover {
-  transform: scale(1.05);
+  transform: scale(1.02);
 }
+
+
